--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
    
     <link rel="icon"  href="images/logo-drk.png">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/starter.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>2022 New Company Inc.</title>
   </head>
   <body>
-    <a class="skip" href="main">Skip to Main Content</a>
+    <a class="skip" href="#main">Skip to Main Content</a>
     <header>
     <nav>
       <ul>
